--- a/.github/workflows/frogbot-scan-repository.yml
+++ b/.github/workflows/frogbot-scan-repository.yml
@@ -27,7 +27,7 @@ jobs:
 
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
-          #JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
+          JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
 
           # [Mandatory if JF_ACCESS_TOKEN is not provided]
           # JFrog username with 'read' permissions for Xray. Must be provided with JF_PASSWORD
@@ -36,7 +36,7 @@ jobs:
           # [Mandatory if JF_ACCESS_TOKEN is not provided]
           # JFrog password. Must be provided with JF_USER
           # JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
-          JFROG_CLI_CA_CERT_PATH: "/builds/$CI_PROJECT_PATH/xray-root-ca.pem"
+          #JFROG_CLI_CA_CERT_PATH: "/builds/$CI_PROJECT_PATH/xray-root-ca.pem"
 
           # [Mandatory]
           # The GitHub token is automatically generated for the job
@@ -50,5 +50,5 @@ jobs:
         # Insert to oidc-provider-name the 'Provider Name' defined in the OIDC integration configured in the JPD
         # with:
         #   oidc-provider-name: ""
-        with:
-          oidc-provider-name: "shashwathr"
+        #with:
+          #oidc-provider-name: "shashwathr"
